--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -26,10 +26,14 @@ jobs:
           echo "SECRET_KEY=$SECRET_KEY" >> .env
           
       - name: Install project dependencies
-        run: uv sync
-
+        run: |
+                uv venv
+                uv pip install -r requirements.txt
+                uv pip install ruff
+          
       - name: Run linter
-        run: uv run python -m ruff check .
+        run: |
+          uv run python -m ruff check .
 
       - name: Run tests and generate coverage
         run: |
