--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -1,22 +1,19 @@
 name: Python CI
-
 on: [push, pull_request]
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-
+          
       - name: Install UV
         run: pip3 install --user uv
-
+      
       - name: Set environment variables
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -27,21 +24,8 @@ jobs:
           
       - name: Install project dependencies
         run: |
-                uv venv
-                uv pip install -r requirements.txt
-                uv pip install ruff
+          uv venv
+          uv pip install -r requirements.txt
           
       - name: Run linter
-        run: |
-          uv run python -m ruff check .
-
-      - name: Run tests and generate coverage
-        run: |
-          uv run pip install pytest pytest-cov
-          uv run pytest --cov=hexlet_code --cov-report=term-missing --cov-report=lcov
-
-      - name: Upload coverage to Qlty.sh
-        uses: qltysh/qlty-action/coverage@main
-        with:
-          coverage-token: ${{ secrets.QLTY_COVERAGE_TOKEN }}
-          files: lcov.info
+        run: uv run ruff check .
