--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,11 @@ dependencies = [
     "python-dotenv>=1.1.0"
 ]
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["page_analyzer"]
 
 
