--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "Flask>=3.1.0",
     "gunicorn>=23.0.0",
-    "python-dotenv>=1.1.0"
+    "python-dotenv>=1.1.0",
+    "validators>=0.34.0",
 ]
 
 [build-system]
